<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingEnd="10dp"
              android:paddingStart="10dp"
              android:background="@drawable/content_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_black_24dp"/>

        <RadioButton
            android:id="@+id/station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@mipmap/ic_location_normal"
            android:text="@string/location"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/issue_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/data_from"
            android:layout_below="@+id/data_from"
            android:text="@string/issue_time"
            android:textColor="@color/gray"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/data_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/src_from"
            android:textColor="@color/gray"/>
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:id="@+id/swipe"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="80dp"
                    android:orientation="horizontal">

                    <com.study.xiaohui.coolweather.view.MyTextView
                        android:id="@+id/tmp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tmp"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"
                        android:textSize="100sp"/>

                    <com.study.xiaohui.coolweather.view.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tmpC"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@+id/tmp"
                        android:textColor="@color/white"
                        android:textSize="50sp"/>
                </RelativeLayout>


                <com.study.xiaohui.coolweather.view.MyTextView
                    android:id="@+id/wea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/weather"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_bg"
                        android:text="@string/pm"
                        android:textColor="@color/center"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/pm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="50"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/aqi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/aqi"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/aqi_src"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/aqi"
                        android:layout_toRightOf="@+id/aqi"
                        android:paddingLeft="5dp"
                        android:text="@string/aqi"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tmp_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/aqi"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/tmp"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/daily_layout"
                    android:orientation="vertical"/>

                <include layout="@layout/layout_txt"/>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>