<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combrf"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/combrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/combrf"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/comContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/combrf"
        android:textColor="@color/gray"
        android:textSize="14sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cwbrf"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/cwbrf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/combrf"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/cwContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cwbrf"
        android:textColor="@color/gray"
        android:textSize="14sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dress_brf"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/dress_brf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/dress_brf"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/dressContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dress_brf"
        android:textColor="@color/gray"
        android:textSize="14sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray"/>
</LinearLayout>
